# pie

client/cli/: Cargo.toml
client/cli/src/: engine.rs  main.rs  submit.rs
client/rust/src/: client.rs  message.rs
pie/: pyproject.toml
pie/src/: main.rs  runtime.rs  server.rs
pie/src/cli/: run.rs  serve.rs  service.rs
pie/src/pie/: manager.py
pie/src/pie_worker/: deberta_service.py  message.py  runtime.py  server.py
runtime/src/: api.rs  instance.rs  model.rs
runtime/src/api/: core.rs
runtime/src/api/core/: classify.rs
runtime/src/model/: request.rs
sdk/examples/: Cargo.toml
sdk/examples/chain-of-verification/: Cargo.toml
sdk/examples/chain-of-verification/src/: lib.rs  util.rs
sdk/examples/roll-back/: Cargo.toml  Pie.toml
sdk/examples/roll-back/src/: lib.rs
sdk/examples/semantic-uncertainty/: Cargo.toml
sdk/examples/semantic-uncertainty-text-completion/: Cargo.toml  Pie.toml
sdk/examples/semantic-uncertainty-text-completion-nli/: Cargo.toml  Pie.toml
sdk/examples/semantic-uncertainty-text-completion-nli/src/: lib.rs  util.rs
sdk/examples/semantic-uncertainty-text-completion/src/: lib.rs  util.rs
sdk/examples/semantic-uncertainty/src/: lib.rs  util.rs
sdk/examples/text-completion/: Cargo.toml
sdk/examples/text-completion/src/: lib.rs
sdk/rust/inferlet/src/: api.rs  lib.rs
