[workspace]
resolver = "2"
members = [
    "agent-codeact",
    "agent-react",
    "agent-swarm",
    "attention-sink",
    "cacheback-decoding",
    "constrained-decoding",
    "graph-of-thought",
    "helloworld",
    "http-server",
    "image-fetch",
    "jacobi-decoding",
    "kvs",
    "output-validation",
    "parallel-generation",
    "prefix-caching",
    "prefix-tree",
    "recursion-of-thought",
    "roll-back",
    "skeleton-of-thought",
    "tree-of-thought",
    "watermarking",
    "windowed-attention",
    # "text-completion",
    # "semantic-uncertainty",
    "semantic-uncertainty-text-completion",
    "semantic-uncertainty-text-completion-nli",
    # "chain-of-verification"
]

[workspace.dependencies]
inferlet = { path = "../rust/inferlet" }
inferlet-macros = { path = "../rust/inferlet-macros" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
futures = "0.3.31"

[profile.release]
lto = true
debug = 1
