[package]
name = "semantic-uncertainty-text-completion"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
inferlet.workspace = true
inferlet-macros.workspace = true
futures.workspace = true
rand = { version = "0.8.5" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
